--- a/SlideShow/style.css
+++ b/SlideShow/style.css
@@ -21,11 +21,17 @@
     width: 50vw;
     height: 50vh;
     border-radius: 15px;
+    transition: all 1s;
+    overflow: hidden;
 }
 
 .item {
     width: 50vw;
     height: 50vh;
+}
+
+.item:first-child {
+    margin-left: -100%;
 }
 
 .item img {
