play no som e click na letra ativado
utilizando metodos e eventos foi possivel dá a funcionalidade de tocar a música na div criada.

--- a/DRUMKIT/style.css
+++ b/DRUMKIT/style.css
@@ -35,8 +35,10 @@ main {
     height: 100px;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+    gap: 15px;
 }
 
 
@@ -46,8 +48,12 @@ main {
     height: 100px;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: #000000BB;
     color: bisque;
     font-size: calc(3vw + 20px);
+    border: 1px solid bisque;
+    user-select: none;
+    cursor: pointer;
+
 
 }
