--- a/DRUMKIT/style.css
+++ b/DRUMKIT/style.css
@@ -54,6 +54,12 @@ main {
     border: 1px solid bisque;
     user-select: none;
     cursor: pointer;
+    transition: transform .2s;
 
+}
 
+.active {
+    transform: scale(1.3);
+    border-color: yellow;
+    box-shadow: 0 0 50px yellow;
 }
