--- a/Audio Recorder/style.css
+++ b/Audio Recorder/style.css
@@ -1,12 +1,2 @@
 
-
-body {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-
-}
+<link rel="canonical" href="https://markjivko.com/tutorials/B3wWIsNHPk4/">
