--- a/aula - sass/sass/style.scss
+++ b/aula - sass/sass/style.scss
@@ -1,7 +1,15 @@
-.classe1 ul {
+.quadrado{
+    width: 100px;
+    height: 100px;
+    background-color: yellow;
+}
+
+.blue{
+    width: 100px;
+    height: 100px;
     background-color: red;
 }
 
-.classe1 li {
-    background-color: blue;
+.teste {
+    padding: 10rem;
 }
